added configuration column for userappkey
